force-app/main/default/objects/Goal__c/fields/Attitude_and_Behavior_Example__c.field-meta.xml
<CustomField>
    <fullName>Attitude_and_Behavior_Example__c</fullName>
    <label>Attitude and Behavior Example</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>