force-app/main/default/objects/Goal__c/fields/Attitude_and_Behavior_Rating__c.field-meta.xml
<CustomField>
    <fullName>Attitude_and_Behavior_Rating__c</fullName>
    <label>Attitude and Behavior Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>