force-app/main/default/objects/Goal__c/fields/Average_Goals_And_Result_Rating__c.field-meta.xml
<CustomField>
    <fullName>Average_Goals_And_Result_Rating__c</fullName>
    <label>Average Goals And Result Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>