force-app/main/default/objects/Goal__c/fields/Average_Professional_Rating__c.field-meta.xml
<CustomField>
    <fullName>Average_Professional_Rating__c</fullName>
    <description>this field will show actual rating</description>
    <label>Average Professional Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>