force-app/main/default/objects/Goal__c/fields/Average_Professional_Skills_Rating__c.field-meta.xml
<CustomField>
    <fullName>Average_Professional_Skills_Rating__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Average Professional Skills Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>