force-app/main/default/objects/Goal__c/fields/Average_Strategic_Impact_Rating__c.field-meta.xml
<CustomField>
    <fullName>Average_Strategic_Impact_Rating__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Average Strategic Impact Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>