force-app/main/default/objects/Goal__c/fields/Average_Strategic_Rating__c.field-meta.xml
<CustomField>
    <fullName>Average_Strategic_Rating__c</fullName>
    <label>Average Strategic Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>