force-app/main/default/objects/Goal__c/fields/Average_Tech_Rating__c.field-meta.xml
<CustomField>
    <fullName>Average_Tech_Rating__c</fullName>
    <description>This field will show actual rating</description>
    <label>Average Tech Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>