force-app/main/default/objects/Goal__c/fields/Average_Technical_Skills_Rating__c.field-meta.xml
<CustomField>
    <fullName>Average_Technical_Skills_Rating__c</fullName>
    <label>Average Technical Skills Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>