force-app/main/default/objects/Goal__c/fields/Business_Development_Example__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Example__c</fullName>
    <label>Business Development Example</label>
    <type>TextArea</type>
</CustomField>