force-app/main/default/objects/Goal__c/fields/Business_Development_Rating__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Rating__c</fullName>
    <label>Business Development Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>