force-app/main/default/objects/Goal__c/fields/Career_Development__c.field-meta.xml
<CustomField>
    <fullName>Career_Development__c</fullName>
    <inlineHelpText>Opportunities for professional growth and advancement.
Access to training and development programs.
Clarity on career paths within the organization.</inlineHelpText>
    <label>Career Development</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>