force-app/main/default/objects/Goal__c/fields/Check_In_By__c.field-meta.xml
<CustomField>
    <fullName>Check_In_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Check In By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Goals (Check In With ?)</relationshipLabel>
    <relationshipName>Goals1</relationshipName>
    <type>Lookup</type>
</CustomField>