force-app/main/default/objects/Goal__c/fields/Check_in_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Date__c</fullName>
    <label>Check in Date</label>
    <type>Date</type>
</CustomField>