force-app/main/default/objects/Goal__c/fields/Communication__c.field-meta.xml
<CustomField>
    <fullName>Communication__c</fullName>
    <inlineHelpText>Effectiveness of communication within the team.
Transparency of information.
Availability and responsiveness of supervisors and colleagues</inlineHelpText>
    <label>Communication</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>