force-app/main/default/objects/Goal__c/fields/Communication_Management_Example__c.field-meta.xml
<CustomField>
    <fullName>Communication_Management_Example__c</fullName>
    <label>Communication Management Example</label>
    <type>TextArea</type>
</CustomField>