force-app/main/default/objects/Goal__c/fields/Communication_Management_Rating__c.field-meta.xml
<CustomField>
    <fullName>Communication_Management_Rating__c</fullName>
    <label>Communication Management Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>