force-app/main/default/objects/Goal__c/fields/Company_Growth_Example__c.field-meta.xml
<CustomField>
    <fullName>Company_Growth_Example__c</fullName>
    <label>Company Growth Example</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>