force-app/main/default/objects/Goal__c/fields/Company_Growth_Rating__c.field-meta.xml
<CustomField>
    <fullName>Company_Growth_Rating__c</fullName>
    <label>Company Growth Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>