force-app/main/default/objects/Goal__c/fields/Consideration_Date__c.field-meta.xml
<CustomField>
    <fullName>Consideration_Date__c</fullName>
    <description>Store the date value 1 day before the quarter end date of KRA</description>
    <formula>Quarter_End_Date__c - 1</formula>
    <label>Consideration Date</label>
    <type>Date</type>
</CustomField>