force-app/main/default/objects/Goal__c/fields/Continuous_Improvement_Example__c.field-meta.xml
<CustomField>
    <fullName>Continuous_Improvement_Example__c</fullName>
    <label>Continuous Improvement Example</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>