force-app/main/default/objects/Goal__c/fields/Continuous_Improvement_Rating__c.field-meta.xml
<CustomField>
    <fullName>Continuous_Improvement_Rating__c</fullName>
    <label>Continuous Improvement Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>