force-app/main/default/objects/Goal__c/fields/Defect_Management_Example__c.field-meta.xml
<CustomField>
    <fullName>Defect_Management_Example__c</fullName>
    <label>Defect Management Example</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>