force-app/main/default/objects/Goal__c/fields/Delivery_Accountability_Example__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Accountability_Example__c</fullName>
    <label>Delivery Accountability Example</label>
    <type>TextArea</type>
</CustomField>