force-app/main/default/objects/Goal__c/fields/Delivery_Accountability_Rating__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Accountability_Rating__c</fullName>
    <label>Delivery Accountability Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>