force-app/main/default/objects/Goal__c/fields/Design_and_Architecture_Example__c.field-meta.xml
<CustomField>
    <fullName>Design_and_Architecture_Example__c</fullName>
    <label>Design and Architecture Example</label>
    <type>TextArea</type>
</CustomField>