force-app/main/default/objects/Goal__c/fields/Design_and_Architecture_Rating__c.field-meta.xml
<CustomField>
    <fullName>Design_and_Architecture_Rating__c</fullName>
    <label>Design and Architecture Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>