force-app/main/default/objects/Goal__c/fields/Development_Example__c.field-meta.xml
<CustomField>
    <fullName>Development_Example__c</fullName>
    <label>Development Example</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>