force-app/main/default/objects/Goal__c/fields/Development_Rating__c.field-meta.xml
<CustomField>
    <fullName>Development_Rating__c</fullName>
    <label>Development Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>