force-app/main/default/objects/Goal__c/fields/Documentation_Example__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Example__c</fullName>
    <label>Documentation Example</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>