force-app/main/default/objects/Goal__c/fields/Documentation_Reporting_Mgmt_Example__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Reporting_Mgmt_Example__c</fullName>
    <label>Documentation/Reporting Mgmt Example</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>