force-app/main/default/objects/Goal__c/fields/Documentation_Reporting_Mgmt_Rating__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Reporting_Mgmt_Rating__c</fullName>
    <label>Documentation/Reporting Mgmt Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>