force-app/main/default/objects/Goal__c/fields/Effective_Communication_Example__c.field-meta.xml
<CustomField>
    <fullName>Effective_Communication_Example__c</fullName>
    <label>Effective Communication Example</label>
    <type>TextArea</type>
</CustomField>