force-app/main/default/objects/Goal__c/fields/Effective_Communication_Rating__c.field-meta.xml
<CustomField>
    <fullName>Effective_Communication_Rating__c</fullName>
    <label>Effective Communication Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>