force-app/main/default/objects/Goal__c/fields/Estimations_Example__c.field-meta.xml
<CustomField>
    <fullName>Estimations_Example__c</fullName>
    <label>Estimations Example</label>
    <type>TextArea</type>
</CustomField>