force-app/main/default/objects/Goal__c/fields/Estimations_Rating__c.field-meta.xml
<CustomField>
    <fullName>Estimations_Rating__c</fullName>
    <label>Estimations Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>