force-app/main/default/objects/Goal__c/fields/Feedback_and_Comments__c.field-meta.xml
<CustomField>
    <fullName>Feedback_and_Comments__c</fullName>
    <label>Feedback and Comments</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>