force-app/main/default/objects/Goal__c/fields/Feedback_and_Recognition__c.field-meta.xml
<CustomField>
    <fullName>Feedback_and_Recognition__c</fullName>
    <inlineHelpText>Feedback mechanisms and how often they are utilized.
Recognition and appreciation for contributions.
Opportunities for providing input and suggestions</inlineHelpText>
    <label>Feedback and Recognition</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>