force-app/main/default/objects/Goal__c/fields/Feedback_and_Recognition_Rating__c.field-meta.xml
<CustomField>
    <fullName>Feedback_and_Recognition_Rating__c</fullName>
    <formula>IMAGE(
IF( Feedback_and_Recognition__c &lt;1 , &quot;/img/samples/stars_000.gif&quot;,
IF(Feedback_and_Recognition__c&lt;2, &quot;/img/samples/stars_100.gif&quot;,
IF(Feedback_and_Recognition__c&lt;3, &quot;/img/samples/stars_200.gif&quot;,
IF(Feedback_and_Recognition__c&lt;4, &quot;/img/samples/stars_300.gif&quot;,
IF(Feedback_and_Recognition__c&lt;5, &quot;/img/samples/stars_400.gif&quot;, &quot;/img/samples/stars_500.gif&quot;
))))),
&quot;Rating&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feedback and Recognition Rating</label>
    <type>Text</type>
</CustomField>