force-app/main/default/objects/Goal__c/fields/Goal_Achievement_Example__c.field-meta.xml
<CustomField>
    <fullName>Goal_Achievement_Example__c</fullName>
    <label>Goal Achievement Example</label>
    <type>TextArea</type>
</CustomField>