force-app/main/default/objects/Goal__c/fields/Goal_Achievement_Rating__c.field-meta.xml
<CustomField>
    <fullName>Goal_Achievement_Rating__c</fullName>
    <label>Goal Achievement Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>