force-app/main/default/objects/Goal__c/fields/Goal_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Goal_Completed_Date__c</fullName>
    <description>In this field, we are populating Goal Completion date</description>
    <label>Goal Completed Date</label>
    <type>Date</type>
</CustomField>