force-app/main/default/objects/Goal__c/fields/is_Navigation_Required__c.field-meta.xml
<CustomField>
    <fullName>is_Navigation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Navigation Required</label>
    <type>Checkbox</type>
</CustomField>