force-app/main/default/objects/Goal__c/fields/Job_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Job_Satisfaction__c</fullName>
    <description>How would you describe your current level of job satisfaction</description>
    <label>Job Satisfaction</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>