force-app/main/default/objects/Goal__c/fields/Knowledge_Sharing_Example__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Sharing_Example__c</fullName>
    <label>Knowledge Sharing Example</label>
    <type>TextArea</type>
</CustomField>