force-app/main/default/objects/Goal__c/fields/Knowledge_Sharing_Rating__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Sharing_Rating__c</fullName>
    <label>Knowledge Sharing Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>