force-app/main/default/objects/Goal__c/fields/KRA_Pulse__c.field-meta.xml
<CustomField>
    <fullName>KRA_Pulse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KRA Pulse</label>
    <referenceTo>Goal__c</referenceTo>
    <relationshipLabel>Goals (KRA Pulse)</relationshipLabel>
    <relationshipName>KRAGoals</relationshipName>
    <type>Lookup</type>
</CustomField>