force-app/main/default/objects/Goal__c/fields/Leadership_and_Management__c.field-meta.xml
<CustomField>
    <fullName>Leadership_and_Management__c</fullName>
    <inlineHelpText>Evaluation of leadership effectiveness.
Fairness and consistency in decision-making.
Managerial support and coaching.</inlineHelpText>
    <label>Leadership and Management</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>