force-app/main/default/objects/Goal__c/fields/Learning_and_Skill_Development_Example__c.field-meta.xml
<CustomField>
    <fullName>Learning_and_Skill_Development_Example__c</fullName>
    <label>Learning and Skill Development Example</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>