force-app/main/default/objects/Goal__c/fields/Learning_and_Skill_Development_Rating__c.field-meta.xml
<CustomField>
    <fullName>Learning_and_Skill_Development_Rating__c</fullName>
    <label>Learning and Skill Development Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>