force-app/main/default/objects/Goal__c/fields/Mentee_KRA_submitted__c.field-meta.xml
<CustomField>
    <fullName>Mentee_KRA_submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This check box will be checked when the mentee has submitted his all PM Config Answer records</description>


    <label>Mentee KRA submitted</label>
    <type>Checkbox</type>
</CustomField>