force-app/main/default/objects/Goal__c/fields/Mentor_KRA_submitted__c.field-meta.xml
<CustomField>
    <fullName>Mentor_KRA_submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This check box will be checked when the mentor has submitted all his PM Config Answer records</description>
    <label>Mentor KRA submitted</label>
    <type>Checkbox</type>
</CustomField>