force-app/main/default/objects/Goal__c/fields/Navigation_address__c.field-meta.xml
<CustomField>
    <fullName>Navigation_address__c</fullName>
    <label>Navigation address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>