force-app/main/default/objects/Goal__c/fields/Overall_Goals_Results_Rating_2__c.field-meta.xml
<CustomField>
    <fullName>Overall_Goals_Results_Rating_2__c</fullName>
    <label>Overall Goals &amp; Results Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>