force-app/main/default/objects/Goal__c/fields/Overall_Goals_Results_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Goals_Results_Rating__c</fullName>
    <formula>Overall_Goals_Results_Rating_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Goals &amp; Results Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>