force-app/main/default/objects/Goal__c/fields/Overall_Professional_Rating_2__c.field-meta.xml
<CustomField>
    <fullName>Overall_Professional_Rating_2__c</fullName>
    <label>Overall Professional Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>