force-app/main/default/objects/Goal__c/fields/Overall_Professional_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Professional_Rating__c</fullName>
    <description>Average of Overall Professional Rating</description>
    <formula>Overall_Professional_Rating_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Professional Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>