force-app/main/default/objects/Goal__c/fields/Overall_Pulse_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Pulse_Rating__c</fullName>
    <description>Show the Overall average rating of pulse based on the value of the Average Pulse Rating field</description>
    <formula>IMAGE(
IF( Pulse_Average_Rating__c &lt;1 , &quot;/img/samples/stars_000.gif&quot;,
IF(Pulse_Average_Rating__c &lt;2, &quot;/img/samples/stars_100.gif&quot;,
IF(Pulse_Average_Rating__c &lt;3, &quot;/img/samples/stars_200.gif&quot;,
IF(Pulse_Average_Rating__c &lt;4, &quot;/img/samples/stars_300.gif&quot;,
IF(Pulse_Average_Rating__c &lt;5, &quot;/img/samples/stars_400.gif&quot;, &quot;/img/samples/stars_500.gif&quot;
))))),
&quot;Rating&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Overall Average Pulse Rating</inlineHelpText>
    <label>Overall Pulse Rating</label>
    <type>Text</type>
</CustomField>