force-app/main/default/objects/Goal__c/fields/Overall_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Rating__c</fullName>
    <formula>IMAGE(
IF( Rating__c &lt;1 , &quot;/img/samples/stars_000.gif&quot;,
IF(Rating__c&lt;2, &quot;/img/samples/stars_100.gif&quot;,
IF(Rating__c&lt;3, &quot;/img/samples/stars_200.gif&quot;,
IF(Rating__c&lt;4, &quot;/img/samples/stars_300.gif&quot;,
IF(Rating__c&lt;5, &quot;/img/samples/stars_400.gif&quot;, &quot;/img/samples/stars_500.gif&quot;
))))),
&quot;Rating&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Rating</label>
    <type>Text</type>
</CustomField>