force-app/main/default/objects/Goal__c/fields/Overall_Strategic_Rating_2__c.field-meta.xml
<CustomField>
    <fullName>Overall_Strategic_Rating_2__c</fullName>
    <label>Overall Strategic Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>