force-app/main/default/objects/Goal__c/fields/Overall_Strategic_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Strategic_Rating__c</fullName>
    <description>Average rating for Overall Strategic Rating</description>
    <formula>Overall_Strategic_Rating_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Strategic Rating</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>