force-app/main/default/objects/Goal__c/fields/Overall_Tech_Rating_2__c.field-meta.xml
<CustomField>
    <fullName>Overall_Tech_Rating_2__c</fullName>
    <description>This field is created for Calculating the average Tech Skills Rating for the Logged in resource based on his Resource Role and created Grid Configuration</description>
    <label>Overall Tech Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>