force-app/main/default/objects/Goal__c/fields/Overall_Tech_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Tech_Rating__c</fullName>
    <description>Formula to calculate the average rating for TECHNICAL ACUMEN</description>
    <formula>Overall_Tech_Rating_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average rating for Technical Acumen</inlineHelpText>
    <label>Overall Tech Rating</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>