force-app/main/default/objects/Goal__c/fields/Parent_Goal__c.field-meta.xml
<CustomField>
    <fullName>Parent_Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Goal</label>
    <referenceTo>Goal__c</referenceTo>
    <relationshipLabel>Goals</relationshipLabel>
    <relationshipName>Goals</relationshipName>
    <type>Lookup</type>
</CustomField>