force-app/main/default/objects/Goal__c/fields/Platform_Knowledge_Example__c.field-meta.xml
<CustomField>
    <fullName>Platform_Knowledge_Example__c</fullName>
    <label>Platform Knowledge Example</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>