force-app/main/default/objects/Goal__c/fields/Platform_Knowledge_Rating__c.field-meta.xml
<CustomField>
    <fullName>Platform_Knowledge_Rating__c</fullName>
    <label>Platform Knowledge Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>