force-app/main/default/objects/Goal__c/fields/POV_Creation_Client_Demos_Example__c.field-meta.xml
<CustomField>
    <fullName>POV_Creation_Client_Demos_Example__c</fullName>
    <label>POV Creation &amp; Client Demos Example</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>