force-app/main/default/objects/Goal__c/fields/POV_Creation_Client_Demos_Rating__c.field-meta.xml
<CustomField>
    <fullName>POV_Creation_Client_Demos_Rating__c</fullName>
    <label>POV Creation &amp; Client Demos Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>