force-app/main/default/objects/Goal__c/fields/Project_Planning_Scheduling_Example__c.field-meta.xml
<CustomField>
    <fullName>Project_Planning_Scheduling_Example__c</fullName>
    <label>Project Planning/Scheduling Example</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>