force-app/main/default/objects/Goal__c/fields/Project_Planning_Scheduling_Rating__c.field-meta.xml
<CustomField>
    <fullName>Project_Planning_Scheduling_Rating__c</fullName>
    <label>Project Planning/Scheduling Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>