force-app/main/default/objects/Goal__c/fields/Project_Success_Example__c.field-meta.xml
<CustomField>
    <fullName>Project_Success_Example__c</fullName>
    <label>Project Success Example</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>