force-app/main/default/objects/Goal__c/fields/Project_Success_Rating__c.field-meta.xml
<CustomField>
    <fullName>Project_Success_Rating__c</fullName>
    <label>Project Success Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>