force-app/main/default/objects/Goal__c/fields/Pulse_Average_Rating__c.field-meta.xml
<CustomField>
    <fullName>Pulse_Average_Rating__c</fullName>
    <description>Calculating the Average rating for Pule Review</description>
    <formula>( Work_Environment__c + Communication__c + Career_Development__c + Work_Life_Balance__c + Feedback_and_Recognition__c + Leadership_and_Management__c + Job_Satisfaction__c ) / 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pulse Average Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>