force-app/main/default/objects/Goal__c/fields/Pulse_Id__c.field-meta.xml
<CustomField>
    <fullName>Pulse_Id__c</fullName>
    <displayFormat>PULSE-{00000}</displayFormat>
    <label>Pulse Id</label>
    <type>AutoNumber</type>
</CustomField>