force-app/main/default/objects/Goal__c/fields/Quarter_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Quarter_End_Date__c</fullName>
    <label>Quarter End Date</label>
    <type>Date</type>
</CustomField>