force-app/main/default/objects/Goal__c/fields/Rating_Image__c.field-meta.xml
<CustomField>
    <fullName>Rating_Image__c</fullName>
    <formula>CASE(
    FLOOR((Average_Goals_And_Result_Rating__c + Average_Professional_Skills_Rating__c + Average_Strategic_Impact_Rating__c + Average_Technical_Skills_Rating__c) * 10) / 10,
    0, &apos;☆☆☆☆☆&apos;,
    0.1, &apos;☆★☆☆☆&apos;,
    0.2, &apos;☆★☆☆☆&apos;,
    0.3, &apos;☆★☆☆☆&apos;,
    0.4, &apos;☆★☆☆☆&apos;,
    0.5, &apos;★☆☆☆☆&apos;,
    0.6, &apos;★☆★☆☆&apos;,
    0.7, &apos;★☆★☆☆&apos;,
    0.8, &apos;★☆★☆☆&apos;,
    0.9, &apos;★☆★☆☆&apos;,
    1, &apos;★☆☆☆☆&apos;,
    1.1, &apos;★☆★☆☆&apos;,
    1.2, &apos;★☆★☆☆&apos;,
    1.3, &apos;★☆★☆☆&apos;,
    1.4, &apos;★☆★☆☆&apos;,
    1.5, &apos;★★☆☆☆&apos;,
    1.6, &apos;★★☆★☆&apos;,
    1.7, &apos;★★☆★☆&apos;,
    1.8, &apos;★★☆★☆&apos;,
    1.9, &apos;★★☆★☆&apos;,
    2, &apos;★★☆☆☆&apos;,
    2.1, &apos;★★☆★☆&apos;,
    2.2, &apos;★★☆★☆&apos;,
    2.3, &apos;★★☆★☆&apos;,
    2.4, &apos;★★☆★☆&apos;,
    2.5, &apos;★★★☆☆&apos;,
    2.6, &apos;★★★☆★&apos;,
    2.7, &apos;★★★☆★&apos;,
    2.8, &apos;★★★☆★&apos;,
    2.9, &apos;★★★☆★&apos;,
    3, &apos;★★★☆☆&apos;,
    3.1, &apos;★★★☆★&apos;,
    3.2, &apos;★★★☆★&apos;,
    3.3, &apos;★★★☆★&apos;,
    3.4, &apos;★★★☆★&apos;,
    3.5, &apos;★★★★☆&apos;,
    3.6, &apos;★★★★☆★&apos;,
    3.7, &apos;★★★★☆★&apos;,
    3.8, &apos;★★★★☆★&apos;,
    3.9, &apos;★★★★☆★&apos;,
    4, &apos;★★★★☆&apos;,
    4.1, &apos;★★★★☆★&apos;,
    4.2, &apos;★★★★☆★&apos;,
    4.3, &apos;★★★★☆★&apos;,
    4.4, &apos;★★★★☆★&apos;,
    4.5, &apos;★★★★★&apos;,
    &apos;☆☆☆☆☆&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating Image</label>
    <type>Text</type>
</CustomField>