force-app/main/default/objects/Goal__c/fields/Requirement_Gathering_Example__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Gathering_Example__c</fullName>
    <label>Requirement Gathering Example</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>