force-app/main/default/objects/Goal__c/fields/Requirement_Gathering_Rating__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Gathering_Rating__c</fullName>
    <label>Requirement Gathering Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>