force-app/main/default/objects/Goal__c/fields/Resource_Management_Example__c.field-meta.xml
<CustomField>
    <fullName>Resource_Management_Example__c</fullName>
    <label>Resource Management Example</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>