force-app/main/default/objects/Goal__c/fields/Resource_Management_Rating__c.field-meta.xml
<CustomField>
    <fullName>Resource_Management_Rating__c</fullName>
    <label>Resource Management Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>